--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -26,3 +26,41 @@
     color: white!important;
     text-decoration: underline;
 }
+
+.patient_data .form-row {
+    margin-left: 0px;
+}
+.patient_data .form-row .col label{
+    min-height: 35px;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 0px 10px;
+}
+
+.patient_data .form-row .col {
+    padding: 3px;
+}
+
+.patient_data .form-row .col .form-control{
+    font-size: 12px!important;
+}
+
+.patient_data .form-row:nth-child(1) .col .daywise_info_status {
+    margin-top: 3px;
+}
+
+.patient_data .form_submit_button{
+    width: 100%;
+    padding: 20px 10px;
+    background: white;
+}
+
+.patient_data .form_submit_button input{
+    width: 15%!important;
+    float: right;
+}
+
+.patient_data .form-content{
+    max-height: 500px;
+    overflow-y: scroll;
+}
