Patient Home Page - Date saving and UI design

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
   <%= render '/layouts/navbar' if current_user %>
-
+  <%= render '/layouts/messages' %>
   <%= yield %>
   </body>
 </html>
