--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -29,6 +29,7 @@
 
 .patient_data .form-row {
     margin-left: 0px;
+    flex-wrap: inherit!important;
 }
 .patient_data .form-row .col label{
     min-height: 35px;
@@ -43,6 +44,7 @@
 
 .patient_data .form-row .col .form-control{
     font-size: 12px!important;
+    width: auto!important;
 }
 
 .patient_data .form-row:nth-child(1) .col .daywise_info_status {
@@ -62,5 +64,9 @@
 
 .patient_data .form-content{
     max-height: 500px;
-    overflow-y: scroll;
+    overflow: scroll;
+}
+
+.error_messages, .success_messages {
+    margin: 1% 5%;
 }
