--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -40,7 +40,7 @@
                     
                     <div class="col">
                         <%= patient.label :missing_services, "Missing Services" if patient_index==0 %>
-                        <%= patient.text_field :missing_services, class: "form-control", maxlength: "100" %>
+                        <%= patient.text_field :missing_services, class: "form-control" %>
                     </div>
                     <% patient_index += 1 %>
                 </div>
