--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -32,16 +32,12 @@
                     </div>
                     
                     <%= patient.fields_for :daywise_infos do |daywise_info| %>
-                        <div class="col">
+                        <div class="col multiselect">
                             <% if patient_index==0 %> <label for="t_date"> <span><%= daywise_info.object.t_date.strftime('%m/%d/%Y') %></span></br><span><%= daywise_info.object.t_date.strftime("%A") %></span> </label> <% end %>
-                            <%= daywise_info.select(:status, @patinet_status_dd, {include_blank: ""}, { :class => 'form-control daywise_info_status' }) %>
+                            <%#= daywise_info.select(:status, patient.object.construct_loc_services , {include_blank: ""}, { :class => 'form-control selectpicker daywise_info_status' }) %>
+                            <%= daywise_info.select :status, options_for_select(@loc_services[patient.object.loc], :selected => daywise_info.object.status), {}, {:multiple => true, :class => "form-control daywise_info_status selectpicker", :style => "width:450px;" } %>
                         </div>
                     <% end %>
-                    
-                    <div class="col">
-                        <%= patient.label :missing_services, "Missing Services" if patient_index==0 %>
-                        <%= patient.text_field :missing_services, class: "form-control" %>
-                    </div>
                     <% patient_index += 1 %>
                 </div>
             <% end %>
@@ -53,3 +49,9 @@
         <div>        
     <% end %>
 </div>
+
+<script>
+    $(function () {
+        $('select').selectpicker();
+    });
+</script>
