v: LOC changes and color coding

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -46,6 +46,7 @@
 .patient_data .form-row .col .form-control{
     font-size: 12px!important;
     width: auto!important;
+    color: #000000;
 }
 
 .patient_data .form-row:nth-child(1) .col .daywise_info_status {
