--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -60,8 +60,12 @@
 }
 
 .patient_data .form_submit_button input{
-    width: 15%!important;
+    width: 13%!important;
     float: right;
+}
+
+.patient_data .form-check-box {
+    width: 100%;
 }
 
 .patient_data .form-content{
