--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,9 @@
       <li class="nav-item welcome-username">
         <span> Hello, <a class="nav-link" href="#"><%= current_user.email %></a> <span>
       </li>
+      <li class="nav-item welcome-username">
+        <span><b>Last Submitted: </b><%= current_user.company.updated_at %><span>
+      </li>
       <li class="nav-item">
         <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: 'btn btn-sm btn-warning' %>
       </li>
