--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -42,9 +42,11 @@
                 </div>
             <% end %>
         </div>
+        <label class="form-check-box">Agree to submit</label>
+        <input class="form-check-box" type="checkbox"></input>
         <div class="form-row form_submit_button">
             <div class="col">
-                <%= f.submit "Update Patient Records", class: 'btn btn-primary btn-block' %>
+                <%= f.submit "Submit Data", class: 'btn btn-primary btn-block' %>
             </div>
         <div>        
     <% end %>
@@ -53,5 +55,13 @@
 <script>
     $(function () {
         $('select').selectpicker();
+        $('.form_submit_button input').attr('disabled', true)
+    });
+    $('input.form-check-box').click(function (){
+        if ($('input.form-check-box').prop('checked') == true){
+            $('.form_submit_button input').attr('disabled', false)
+        }else{
+            $('.form_submit_button input').attr('disabled', true)
+        }
     });
 </script>
