--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -35,14 +35,14 @@
                         <div class="col multiselect">
                             <% if patient_index==0 %> <label for="t_date"> <span><%= daywise_info.object.t_date.strftime('%m/%d/%Y') %></span></br><span><%= daywise_info.object.t_date.strftime("%A") %></span> </label> <% end %>
                             <%#= daywise_info.select(:status, patient.object.construct_loc_services , {include_blank: ""}, { :class => 'form-control selectpicker daywise_info_status' }) %>
-                            <%= daywise_info.select :status, options_for_select(@loc_services[patient.object.loc][:services], :selected => daywise_info.object.status), {}, {:multiple => true, :class => "form-control daywise_info_status selectpicker", :style => "width:450px;" } %>
+                            <%= daywise_info.select :status, options_for_select(@loc_services[patient.object.loc][:services], :selected => daywise_info.object.status == [] ? ['None'] : daywise_info.object.status), {}, {:multiple => true, :class => "form-control daywise_info_status selectpicker", :style => "width:450px;" } %>
                         </div>
                     <% end %>
                     <% patient_index += 1 %>
                 </div>
             <% end %>
         </div>
-        <label class="form-check-box">Agree to submit</label>
+        <label class="form-check-box">Please check the box to agree that once data is submitted, Data will not be available for any edits or change</label>
         <input class="form-check-box" type="checkbox"></input>
         <div class="form-row form_submit_button">
             <div class="col">
