--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -48,22 +48,26 @@
        </div>
         <div class="form-row form_submit_button">
             <div class="col">
-                <%= f.submit "Submit Data", class: 'btn btn-primary btn-block' %>
+                <%= f.submit "Submit Data", class: 'btn btn-primary btn-block submit-button', disabled: true %>
             </div>
-        <div>        
+        <div>
+        <div class="form-row form_save_button">
+            <div class="col">
+                <%= f.submit "Save For Later", class: 'btn btn-primary btn-block'%>
+            </div>
+        <div>       
     <% end %>
 </div>
 
 <script>
     $(function () {
         $('select').selectpicker();
-        $('.form_submit_button input').attr('disabled', true)
     });
     $('input.form-check-box').click(function (){
         if ($('input.form-check-box').prop('checked') == true){
-            $('.form_submit_button input').attr('disabled', false)
+            $('.form_submit_button input.submit-button').attr('disabled', false)
         }else{
-            $('.form_submit_button input').attr('disabled', true)
+            $('.form_submit_button input.submit-button').attr('disabled', true)
         }
     });
 </script>
