--- a/app/assets/stylesheets/patients.scss
+++ b/app/assets/stylesheets/patients.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Patients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.card {
+  width: 50%;
+  text-align: center;
+  margin-left: 25%;
+  margin-top: 5%;
+  font-size: larger;
+  background-color: #d4edda !important;
+  border: 1px solid #c3e6cb !important;
+  color: #155724;
+}
