--- a/app/assets/stylesheets/patients.scss
+++ b/app/assets/stylesheets/patients.scss
@@ -13,3 +13,14 @@
   border: 1px solid #c3e6cb !important;
   color: #155724;
 }
+
+.calender-div{
+  width: 55%;
+  height: 100px;
+  margin-top: 6%;
+  margin-left: 22%;
+}
+
+.calender-form{
+  text-align: center;
+}
