--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,7 @@
       </li>
       <% if Role.find(current_user.role_id).name == 'User' %>
       <li class="nav-item welcome-username">
+        <input type="date" class="navbar-date"/>
         <span><b>Last Submitted: </b><%= current_user.company.updated_at %><span>
       </li>
       <% end %>
@@ -26,3 +27,20 @@
     </ul>
   </div>
 </nav>
+
+<script>
+$(".navbar-date").change(function () {
+  var sDate = $('.navbar-date').val();
+  $.ajax({
+    type: "GET",
+    url: "patients/get_date", // the method we are calling
+    data: { selected_date: sDate },
+    success: function (result) {
+        console.log('Yay! It worked!');
+    },
+    error: function (result) {
+        console.log('Oh no :(');
+    }
+  });
+});
+</script>
