--- a/app/views/patients/get_calender.html.erb
+++ b/app/views/patients/get_calender.html.erb
@@ -1,6 +1,6 @@
 <div class="calender-div">
   <%= form_with url: "/patients/get_date", class: "calender-form", method: :get do |form| %>
-    <p>Last Submitted:<%= @company.last_updated_at.strftime('%m/%d/%Y') %></p>
+    <p>Last Submitted:<%= @company.last_updated_at.try(:strftime, ('%m/%d/%Y')) %></p>
     <%= form.label :date, "Select Date:" %>
     <%= form.date_field :selected_date, min:  @company.last_updated_at %>
     <%= form.submit "Find Records" %>
