--- a/app/views/patients/get_calender.html.erb
+++ b/app/views/patients/get_calender.html.erb
@@ -1,8 +1,11 @@
 <div class="calender-div">
   <%= form_with url: "/patients/get_date", class: "calender-form", method: :get do |form| %>
-    <p>Last Submitted:<%= @company.last_updated_at.try(:strftime, ('%m/%d/%Y')) %></p>
+    <p class="sub_text" style="background-color: #000;color: #fff;padding: 5px 0px;
+    font-weight: 600;">Last Submitted:<%= @company.last_updated_at.try(:strftime, ('%m/%d/%Y')) %></p>
+    <div class="form-inn">
     <%= form.label :date, "Select Date:" %>
     <%= form.date_field :selected_date, min:  @company.last_updated_at %>
     <%= form.submit "Find Records" %>
   <% end %>
+</div>
 </div>
