Adjusted last submitted time display format

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
       </li>
       <% if Role.find(current_user.role_id).name == 'User' %>
       <li class="nav-item welcome-username">
-        <span><b>Last Submitted: </b><%= current_user.company.last_updated_at %><span>
+        <span><b>Last Submitted :&nbsp </b><%= current_user.company.last_updated_at.try(:strftime, ('%m/%d/%Y')) %><span>
       </li>
       <% end %>
       <li class="nav-item">
